MODIFY audio_label_clip 데이터 앞에 label 붙이는게 아니라 폴더별로 라벨 얻을 수 있게 바꾸기

--- a/make_data_by_overlay.ipynb
+++ b/make_data_by_overlay.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from td_utils import load_raw_audio_with_folder\n",
     "from td_utils import load_raw_audio\n",
     "from mix_audio import create_training_data\n",
     "from utils import make_dir\n",
@@ -19,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "version = 'test'"
+    "version = 'train'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,22 +39,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "./data/audio_label_clip/background\n./data/audio_label_clip/.DS_Store\n./data/audio_label_clip/snore\n./data/audio_label_clip/negative\n./data/audio_label_clip/refined\n./data/audio_label_clip/snore_left(너무많아서)\n"
+    }
+   ],
    "source": [
+    "# 여기서 데이터 불러오기\n",
     "if version == 'train':\n",
     "    audio_dir = os.path.join('.','data','audio_label_clip')\n",
     "else:\n",
     "    audio_dir = os.path.join('.','data','audio_label_clip_for_test')\n",
     "\n",
-    "activates, negatives, backgrounds = load_raw_audio(audio_dir)\n",
-    "\n",
+    "activates, negatives, backgrounds = load_raw_audio_with_folder(audio_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "0%|          | 0/10 [00:00<?, ?it/s]\n\n\n\n\n1000010000\n\n\n\n\n\n0\n\n"
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Range cannot be empty (low >= high) unless no samples are taken",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-6c07f412511b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mbackground\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackgrounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# activate negative는 여러개 뽑기?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     x, y = create_training_data(background, \n\u001b[0m\u001b[1;32m      9\u001b[0m                                \u001b[0mactivates\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                                \u001b[0mnegatives\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/programm/maetel/maetel_snore_detect/Beeeep--/mix_audio.py\u001b[0m in \u001b[0;36mcreate_training_data\u001b[0;34m(background, activates, negatives, filename, kernel, stride)\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mrandom_activate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrandom_activates\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m             \u001b[0mrandom_activate\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m             \u001b[0mbackground\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msegment_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minsert_audio_clip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbackground\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_activate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprevious_segments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0msegment_time\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;31m#                 print('active')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/programm/maetel/maetel_snore_detect/Beeeep--/mix_audio.py\u001b[0m in \u001b[0;36minsert_audio_clip\u001b[0;34m(background, audio_clip, previous_segments)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mtotal_ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbackground\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0msegment_ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maudio_clip\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0msegment_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_random_time_segment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/programm/maetel/maetel_snore_detect/Beeeep--/mix_audio.py\u001b[0m in \u001b[0;36mget_random_time_segment\u001b[0;34m(segment_ms, total_ms)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n\\n\\n\\n\\n'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n\\n\\n\\n\\n'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_ms\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0msegment_start\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtotal_ms\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# Make sure segment doesn't run past the 10sec background\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0msegment_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msegment_start\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msegment_ms\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.randint\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Range cannot be empty (low >= high) unless no samples are taken"
+     ]
+    }
+   ],
+   "source": [
     "num_of_data = 10\n",
     "\n",
     "for i in tqdm(range(num_of_data)):\n",
     "    j = np.random.randint(0, len(backgrounds))\n",
+    "    # background 하나만 뽑기\n",
     "    background = backgrounds[j]\n",
+    "    # activate negative는 여러개 뽑기?\n",
     "    x, y = create_training_data(background, \n",
     "                               activates, \n",
     "                               negatives, \n",
@@ -90,13 +128,22 @@
    "source": [
     "plt.plot(np.load('./data/XY_{}/y_{}.npy'.format(version, num_of_data-1)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mix_audio import create_training_data"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytube",
+   "display_name": "Python 3.8.1 64-bit ('maetel': conda)",
    "language": "python",
-   "name": "pytube"
+   "name": "python38164bitmaetelconda3df2534ef5d74fb09751a958eb6cd1d2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -108,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
