--- a/make_data_by_overlay.ipynb
+++ b/make_data_by_overlay.ipynb
@@ -45,7 +45,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "./data/audio_label_clip/background\n./data/audio_label_clip/.DS_Store\n./data/audio_label_clip/snore\n./data/audio_label_clip/negative\n./data/audio_label_clip/refined\n./data/audio_label_clip/snore_left(너무많아서)\n"
+     "text": "./data/audio_label_clip/background\n./data/audio_label_clip/.DS_Store\n./data/audio_label_clip/snore\n./data/audio_label_clip/negative\n./data/audio_label_clip/others\n"
     }
    ],
    "source": [
@@ -59,31 +59,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": "0%|          | 0/10 [00:00<?, ?it/s]\n\n\n\n\n1000010000\n\n\n\n\n\n0\n\n"
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Range cannot be empty (low >= high) unless no samples are taken",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-6c07f412511b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mbackground\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackgrounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# activate negative는 여러개 뽑기?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     x, y = create_training_data(background, \n\u001b[0m\u001b[1;32m      9\u001b[0m                                \u001b[0mactivates\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                                \u001b[0mnegatives\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/programm/maetel/maetel_snore_detect/Beeeep--/mix_audio.py\u001b[0m in \u001b[0;36mcreate_training_data\u001b[0;34m(background, activates, negatives, filename, kernel, stride)\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mrandom_activate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrandom_activates\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m             \u001b[0mrandom_activate\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m             \u001b[0mbackground\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msegment_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minsert_audio_clip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbackground\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_activate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprevious_segments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0msegment_time\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;31m#                 print('active')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/programm/maetel/maetel_snore_detect/Beeeep--/mix_audio.py\u001b[0m in \u001b[0;36minsert_audio_clip\u001b[0;34m(background, audio_clip, previous_segments)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mtotal_ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbackground\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0msegment_ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maudio_clip\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0msegment_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_random_time_segment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/programm/maetel/maetel_snore_detect/Beeeep--/mix_audio.py\u001b[0m in \u001b[0;36mget_random_time_segment\u001b[0;34m(segment_ms, total_ms)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n\\n\\n\\n\\n'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n\\n\\n\\n\\n'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_ms\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0msegment_start\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhigh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtotal_ms\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msegment_ms\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# Make sure segment doesn't run past the 10sec background\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0msegment_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msegment_start\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msegment_ms\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.randint\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Range cannot be empty (low >= high) unless no samples are taken"
-     ]
-    }
-   ],
    "source": [
     "num_of_data = 10\n",
     "\n",
@@ -92,7 +67,7 @@
     "    # background 하나만 뽑기\n",
     "    background = backgrounds[j]\n",
     "    # activate negative는 여러개 뽑기?\n",
-    "    x, y = create_training_data(background, \n",
+    "    x,x_minus, y = create_training_data(background, \n",
     "                               activates, \n",
     "                               negatives, \n",
     "                               filename='./data/{}_audios/mix_{}.wav'.format(version, i))\n",
@@ -100,7 +75,17 @@
     "    y = np.transpose(y)\n",
     "    np.save('./data/XY_{}/x_{}'.format(version, i),x)\n",
     "    np.save('./data/XY_{}/y_{}'.format(version, i),y)"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "100%|██████████| 10/10 [00:01<00:00,  5.75it/s]\n"
+    }
+   ],
+   "metadata": {},
+   "execution_count": 9
   },
   {
    "cell_type": "code",
