ADD FEATURE augmentation frequency 변화도 추가

--- a/preprocessing/data_augmentation.ipynb
+++ b/preprocessing/data_augmentation.ipynb
@@ -190,27 +190,62 @@
    "metadata": {},
    "source": [
     "# 2. Adding White noise\n",
-    "(헷갈리기 쉬운 음성)"
+    "(헷갈리기 쉬운 음성 같이 더하기)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'12-Blender-10min.mp3'"
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def adding_random_noise(data, sr=22050, noise_rate=0.005):\n",
-    "    # We limited the amplitude of the noise so we can still hear the word even with the noise, \n",
-    "    # which is the objective\n",
-    "    rn = np.random.randn(len(data))\n",
-    "    data_rn = data + noise_rate*wn\n",
-    "    plot_time_series(data_wn)\n",
-    "    librosa.output.write_wav(os.path.join(audio_dir,'white_noise.wav'), data_rn, sr=sr)\n",
+    "os.listdir(noise_dir)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "White Noise 저장 성공\n"
+    },
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "def adding_white_noise(sound_file, filename, sr=22050, noise_rate=0.005):\n",
+    "    # 길이 만큼 random 돌려서 걔 얻기\n",
+    "    file_list = os.listdir(noise_dir)\n",
+    "    noise_file_idx = random.randint(0,len(file_list)-1)\n",
+    "    noise_file = AudioSegment.from_file(os.path.join(noise_dir,file_list[noise_file_idx]))\n",
+    "    noise_file = noise_file-25\n",
+    "    new_sound = sound_file.overlay(noise_file)\n",
+    "    new_sound.export(os.path.join(audio_dir,f'{filename}.mp3'),format='mp3')\n",
     "    print('White Noise 저장 성공')\n",
     "\n",
     "    return 0\n",
     "\n",
-    "adding_random_noise(data)"
+    "sound_file = AudioSegment.from_file(os.path.join(audio_dir,'u1722694_0.mp3'))\n",
+    "adding_white_noise(sound_file, 'white')"
    ]
   },
   {
@@ -356,10 +391,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 6. Minus the sound"
    ]
@@ -403,6 +436,43 @@
     "    wav_to_mp3(audio_dir, filename)\n",
     "    return 0\n",
     "minus_sound(data,'minus', sr=22050)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7.Freqeuncy 변화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "freq_aug\n"
+    }
+   ],
+   "source": [
+    "import librosa\n",
+    "import numpy as np\n",
+    "\n",
+    "def freq_augmentation(data,filename):\n",
+    "    switch = np.random.randint(3)\n",
+    "    if(switch==0): #원본\n",
+    "        return [data,sr]\n",
+    "    elif(switch==1): #고음\n",
+    "        rate = np.random.uniform(2, 5)\n",
+    "    elif(switch==2): #저음\n",
+    "        rate = np.random.uniform(-5, -2)\n",
+    "    y = librosa.effects.pitch_shift(data, sr, n_steps=rate)\n",
+    "    librosa.output.write_wav(os.path.join(audio_dir,f'{filename}.wav'), y, sr=sr)\n",
+    "    wav_to_mp3(audio_dir, filename)\n",
+    "\n",
+    "freq_augmentation(data,'freq_aug')"
    ]
   },
   {
