MINOR 파일 정리하면서 경로 꼬인 부분 해결

--- a/preprocessing/make_data_by_overlay.ipynb
+++ b/preprocessing/make_data_by_overlay.ipynb
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_dir('./data/{}_audios'.format(version))\n",
-    "make_dir('./data/XY_{}'.format(version))"
+    "make_dir('../data/{}_audios'.format(version))\n",
+    "make_dir('../data/XY_{}'.format(version))"
    ]
   },
   {
@@ -54,53 +54,32 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "./data/audio_label_clip_for_test/background\n./data/audio_label_clip_for_test/.DS_Store\n./data/audio_label_clip_for_test/snore\n./data/audio_label_clip_for_test/negative\n./data/audio_label_clip_for_test/test.zip\n"
+     "text": "../data/audio_label_clip_for_test/background\n../data/audio_label_clip_for_test/.DS_Store\n../data/audio_label_clip_for_test/snore\n../data/audio_label_clip_for_test/negative\n"
     }
    ],
    "source": [
     "# 여기서 데이터 불러오기\n",
     "if version == 'train':\n",
-    "    audio_dir = os.path.join('.','data','audio_label_clip')\n",
+    "    audio_dir = os.path.join('..','data','audio_label_clip')\n",
     "else:\n",
-    "    audio_dir = os.path.join('.','data','audio_label_clip_for_test')\n",
+    "    audio_dir = os.path.join('..','data','audio_label_clip_for_test')\n",
     "\n",
     "activates, negatives, backgrounds = load_raw_audio_with_folder(audio_dir)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# negatives"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": "0%|          | 0/2 [00:00<?, ?it/s]\n"
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-f3c03456c6fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mbackground\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackgrounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# activate negative는 여러개 뽑기?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     x,x_minus, y = create_training_data(background, \n\u001b[0m\u001b[1;32m      9\u001b[0m                                \u001b[0mactivates\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                                \u001b[0mnegatives\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/programm/maetel/maetel_snore_detect/snorrr/mix_audio.py\u001b[0m in \u001b[0;36mcreate_training_data\u001b[0;34m(background, activates, negatives, filename, kernel, stride, mel)\u001b[0m\n\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m     \u001b[0mfile_handle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackground\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexport\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"wav\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mmel\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_minus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph_melspectrogram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
+     "text": "100%|██████████| 5/5 [00:00<00:00,  6.68it/s]\n"
     }
    ],
    "source": [
-    "num_of_data = 2\n",
+    "num_of_data = 5\n",
     "\n",
     "for i in tqdm(range(num_of_data)):\n",
     "    j = np.random.randint(0, len(backgrounds))\n",
@@ -110,12 +89,12 @@
     "    x,x_minus, y = create_training_data(background, \n",
     "                               activates, \n",
     "                               negatives, \n",
-    "                               mel = True,\n",
-    "                               filename='./data/{}_audios/mix_{}.wav'.format(version, i))\n",
+    "                               use_mel = True,\n",
+    "                               filename='../data/{}_audios/mix_{}.wav'.format(version, i))\n",
     "    x = np.transpose(x)\n",
     "    y = np.transpose(y)\n",
-    "    np.save('./data/XY_{}/x_{}'.format(version, i),x)\n",
-    "    np.save('./data/XY_{}/y_{}'.format(version, i),y)"
+    "    np.save('../data/XY_{}/x_{}'.format(version, i),x)\n",
+    "    np.save('../data/XY_{}/y_{}'.format(version, i),y)"
    ]
   },
   {
